# Graph-Neural-Networks

./: .gitignore  GNN_Powerflow_V2.1.1.ipynb  GNN_Powerflow_V2.1.ipynb  GNN_Powerflow_V2.2 -GPU comp.ipynb  GNN_Powerflow_V2.3 - PTDF_implementation.ipynb  GNN_Powerflow_V2.4.ipynb  GNN_Powerflow_V2.5.1.ipynb  GNN_Powerflow_V2.6.1_Training.ipynb  GNN_Powerflow_V2.6_Analysis.ipynb  GNN_Powerflow_V2.6_Analysis_backup.ipynb  GNN_Powerflow_V2.6_DataGen.ipynb  GNN_Powerflow_V2.6_Training.ipynb  GNN_Powerflow_V2.6_Training_backup.ipynb  GNN_Powerflow_V2.6_Training_backup_12.ipynb  Power_flow_simulation.ipynb  Project backlog and known issues.litcoffee  README.md  Simple_GNN_Powerflow.ipynb  _patch_col7.py  hello.py  methodology_generated.tex  methodology_traceability.md  pyproject.toml
.docs/plans/: 001-REFACTOR-remove-col7-pbal-from-node-features.md  002-REFACTOR-run-key-label-style-cleanup.md
.docs/plans/done/: 001-REFACTOR-remove-col7-pbal-from-node-features.md
.docs/research/: 2026-04-10-cigre14-physics-regression.md  2026-04-13-extra-bus-indentation-bug.md  2026-05-10-run-key-label-cleanup.md
