[project]
name = "graph-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.24.1",
    "highspy>=1.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pypsa>=0.28.0",
    "pyscipopt>=5.3.0",
    "pyshp>=2.3.1",
    "shapely>=2.0.7",
]
